# arya-ai

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  manifest.json  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor/rules/: desiharveyspecter.mdc  vakilpro.mdc
docs/: THIRD_PARTY.md
server/: main.py
skills/_company_drafting_base/: pair_md_to_docx.sh
skills/desiharveyspecter-orchestrator/: SKILL.md
skills/vakilpro-orchestrator/: SKILL.md
